[package]
name = "nostr_boltcard_bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nostr = "0.32.0"
nostr-sdk = "0.32.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
csv = "1.1.5"
env_logger = "0.10.0"
num_cpus = "1.15.0"
tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
anyhow = "1.0.70"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"